--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body class="bg-gray-100">
     <!-- Header -->
     <header class="banner">
-        <div class="container mx-auto flex items-center justify-between px-4">
-            <div class="flex items-center">
+        <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
+            <div class="flex flex-col items-center md:flex-row">
                 <img src="philo-academy-pegasus.jpg" alt="Philo Academy Pegasus Logo" class="logo">
                 <div class="text-container">
                     <h1 class="text-4xl md:text-5xl font-bold accent-text">Philo Academy</h1>
@@ -36,7 +36,7 @@
             </div>
             <div class="dropdown relative">
                 <a href="#about" class="nav-link">About Us</a>
-                <div class="dropdown-menu hidden absolute top-full left-0 w-48">
+                <div class="dropdown-menu hidden">
                     <a href="mission.html" target="_blank" class="block">Our Mission</a>
                     <a href="history.html" target="_blank" class="block">History</a>
                     <a href="faculty.html" target="_blank" class="block">Faculty</a>
@@ -44,7 +44,7 @@
             </div>
             <div class="dropdown relative">
                 <a href="#academics" class="nav-link">Academics</a>
-                <div class="dropdown-menu hidden absolute top-full left-0 w-48">
+                <div class="dropdown-menu hidden">
                     <a href="k5-program.html" target="_blank" class="block">K-5 Program</a>
                     <a href="6-9-program.html" target="_blank" class="block">6-9 Program</a>
                     <a href="10-12-program.html" target="_blank" class="block">10-12 Program</a>
@@ -52,7 +52,7 @@
             </div>
             <div class="dropdown relative">
                 <a href="#admissions" class="nav-link">Admissions</a>
-                <div class="dropdown-menu hidden absolute top-full left-0 w-48">
+                <div class="dropdown-menu hidden">
                     <a href="process.html" target="_blank" class="block">Process</a>
                     <a href="tuition.html" target="_blank" class="block">Tuition</a>
                     <a href="financial-aid.html" target="_blank" class="block">Financial Aid</a>
