--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="flex flex-col items-center md:flex-row">
                 <img src="philo-academy-pegasus.jpg" alt="Philo Academy Pegasus Logo" class="logo">
                 <div class="text-container">
-                    <h1 class="text-4xl md:text-5xl font-bold accent-text">Philo Academy</h1>
+                    <h1 class="text-4xl md:text-5xl accent-text">Philo Academy</h1>
                     <p class="motto mt-2">Virtute ad Veritatem</p>
                 </div>
             </div>
@@ -160,3 +160,5 @@
     </footer>
 
     <script src="script.js" defer></script>
+</body>
+</html>
