--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Main Content -->
     <main>
         <!-- Hero Section -->
-        <section id="home" class="hero-section" style="background-image: url('https://images.unsplash.com/photo-1457369804613-52c61a468e7d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80')">
+        <section id="home" class="hero-section" style="background-image: url('https://www.istockphoto.com/photo/low-angle-view-of-books-on-shelves-in-long-room-of-trinity-college-old-library-in-gm1984345363-559203525?utm_campaign=srp_photos_bottom&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fclassical-school-building&utm_medium=affiliate&utm_source=unsplash&utm_term=classical+school+building%3A%3A%3A')">
             <div class="hero-overlay">
                 <div>
                     <h2 class="font-bold accent-text">Welcome to Philo Academy</h2>
@@ -84,7 +84,7 @@
             <h2 class="font-bold">About Philo Academy</h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 p-4">
-                    <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" alt="Philo Academy Campus" class="rounded-lg shadow-lg" loading="lazy">
+                    <img src="https://www.istockphoto.com/photo/interior-views-of-an-empty-japanese-style-classroom-gm1366797961-437228029" alt="Philo Academy Campus" class="rounded-lg shadow-lg" loading="lazy">
                 </div>
                 <div class="md:w-1/2 p-4">
                     <p>Located in the vibrant Twin Cities, Philo Academy is a classical, great books school dedicated to the pursuit of truth, goodness, and beauty. Our rigorous curriculum, grounded in the Western intellectual tradition, fosters nobility, virtue, and intellectual excellence. With a unique emphasis on traditional Western martial training, we cultivate both mind and body.</p>
