--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Philo Academy, a classical great books school in the Twin Cities, dedicated to truth, goodness, and beauty.">
-    <meta name="keywords" content="Philo Academy, classical education, great books, Twin Cities, virtue, academics">
-    <meta name="author" content="Philo Academy">
-    <title>Philo Academy | Virtute ad Veritatem</title>
+    <meta name="description" content="Philo Classical Academy, a classical great books school in the Twin Cities, dedicated to truth, goodness, and beauty.">
+    <meta name="keywords" content="Philo Classical Academy, classical education, great books, Twin Cities, virtue, academics">
+    <meta name="author" content="Philo Classical Academy">
+    <title>Philo Classical Academy | Virtute ad Veritatem</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -16,9 +16,9 @@
     <header class="banner">
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <div class="flex flex-col items-center md:flex-row">
-                <img src="philo-academy-pegasus.jpg" alt="Philo Academy Pegasus Logo" class="logo">
+                <img src="philo-academy-pegasus.jpg" alt="Philo Classical Academy Pegasus Logo" class="logo">
                 <div class="text-container">
-                    <h1 class="text-4xl md:text-5xl accent-text">Philo Academy</h1>
+                    <h1 class="text-4xl md:text-5xl accent-text">Philo Classical Academy</h1>
                     <p class="motto mt-2">Virtute ad Veritatem</p>
                 </div>
             </div>
@@ -73,7 +73,7 @@
         <section id="home" class="hero-section" style="background-image: url('https://images.unsplash.com/photo-1568667256531-7a0b3081c267?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80')">
             <div class="hero-overlay">
                 <div>
-                    <h2 class="font-bold accent-text">Welcome to Philo Academy</h2>
+                    <h2 class="font-bold accent-text">Welcome to Philo Classical Academy</h2>
                     <p class="mt-4">A Classical Education for Truth, Goodness, and Beauty</p>
                 </div>
             </div>
@@ -81,13 +81,13 @@
 
         <!-- About Section -->
         <section id="about" class="container mx-auto">
-            <h2 class="font-bold">About Philo Academy</h2>
+            <h2 class="font-bold">About Philo Classical Academy</h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 p-4">
-                    <img src="https://images.unsplash.com/photo-1585772581215-0b6b9a9f88eb?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" alt="Philo Academy Campus" class="rounded-lg shadow-lg" loading="lazy">
+                    <img src="https://images.unsplash.com/photo-1585772581215-0b6b9a9f88eb?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" alt="Philo Classical Academy Campus" class="rounded-lg shadow-lg" loading="lazy">
                 </div>
                 <div class="md:w-1/2 p-4">
-                    <p>Located in the vibrant Twin Cities, Philo Academy is a classical, great books school dedicated to the pursuit of truth, goodness, and beauty. Our rigorous curriculum, grounded in the Western intellectual tradition, fosters nobility, virtue, and intellectual excellence. With a unique emphasis on traditional Western martial training, we cultivate both mind and body.</p>
+                    <p>Located in the vibrant Twin Cities, Philo Classical Academy is a classical, great books school dedicated to the pursuit of truth, goodness, and beauty. Our rigorous curriculum, grounded in the Western intellectual tradition, fosters nobility, virtue, and intellectual excellence. With a unique emphasis on traditional Western martial training, we cultivate both mind and body.</p>
                 </div>
             </div>
         </section>
@@ -98,7 +98,7 @@
                 <!-- School Overview -->
                 <div class="info-card">
                     <h3 class="font-bold">Our School</h3>
-                    <p>Philo Academy is a beacon of classical education, fostering a serious and academic environment where students engage with the great books and timeless ideas.</p>
+                    <p>Philo Classical Academy is a beacon of classical education, fostering a serious and academic environment where students engage with the great books and timeless ideas.</p>
                     <a href="#about" class="learn-more inline-block mt-4">Learn More</a>
                 </div>
                 <!-- Mission -->
@@ -116,7 +116,7 @@
                 <!-- News -->
                 <div class="info-card">
                     <h3 class="font-bold">News</h3>
-                    <p>Stay updated with the latest events, achievements, and announcements from Philo Academy.</p>
+                    <p>Stay updated with the latest events, achievements, and announcements from Philo Classical Academy.</p>
                     <a href="#news" class="learn-more inline-block mt-4">Learn More</a>
                 </div>
             </div>
@@ -132,14 +132,14 @@
         <!-- Admissions Overview -->
         <section id="admissions" class="container mx-auto">
             <h2 class="font-bold">Admissions</h2>
-            <p class="mb-4">Philo Academy welcomes applications from families who share our commitment to classical education and virtue. Our admissions process is designed to identify students who will thrive in our rigorous academic environment.</p>
+            <p class="mb-4">Philo Classical Academy welcomes applications from families who share our commitment to classical education and virtue. Our admissions process is designed to identify students who will thrive in our rigorous academic environment.</p>
             <p>Learn more about our application process, tuition, and financial aid opportunities through the links below.</p>
         </section>
 
         <!-- News Page -->
         <section id="news" class="container mx-auto">
             <h2 class="font-bold">News</h2>
-            <p class="mb-4">Stay informed about the latest developments at Philo Academy, including student achievements, faculty publications, and upcoming events.</p>
+            <p class="mb-4">Stay informed about the latest developments at Philo Classical Academy, including student achievements, faculty publications, and upcoming events.</p>
             <p>Recent highlights include our annual Great Books Symposium and student awards in classical language competitions.</p>
         </section>
 
@@ -154,9 +154,9 @@
     <!-- Footer -->
     <div class="footer-divider"></div>
     <footer class="footer">
-        <p>Philo Academy | 608-799-7686 | info@philoacademy.org</p>
+        <p>Philo Classical Academy | 608-799-7686 | info@philoacademy.org</p>
         <p>Website: philoacademy.org</p>
-        <p>© 2025 Philo Academy. All rights reserved.</p>
+        <p>© 2025 Philo Classical Academy. All rights reserved.</p>
     </footer>
 
     <script src="script.js" defer></script>
