--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Main Content -->
     <main>
         <!-- Hero Section -->
-        <section id="home" class="hero-section" style="background-image: url('https://images.unsplash.com/photo-1568667256531-7a0b3081c267?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80')">
+        <section id="home" class="hero-section" style="background-image: url('classical-library.jpg')">
             <div class="hero-overlay">
                 <div>
                     <h2 class="font-bold accent-text">Welcome to Philo Classical Academy</h2>
@@ -84,7 +84,7 @@
             <h2 class="font-bold">About Philo Classical Academy</h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 p-4">
-                    <img src="https://images.unsplash.com/photo-1585772581215-0b6b9a9f88eb?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" alt="Philo Classical Academy Campus" class="rounded-lg shadow-lg" loading="lazy">
+                    <img src="schoolbuilding.jpg" alt="Philo Classical Academy Campus" class="rounded-lg shadow-lg" loading="lazy">
                 </div>
                 <div class="md:w-1/2 p-4">
                     <p>Located in the vibrant Twin Cities, Philo Classical Academy is a classical, great books school dedicated to the pursuit of truth, goodness, and beauty. Our rigorous curriculum, grounded in the Western intellectual tradition, fosters nobility, virtue, and intellectual excellence. With a unique emphasis on traditional Western martial training, we cultivate both mind and body.</p>
