--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Main Content -->
     <main>
         <!-- Hero Section -->
-        <section id="home" class="hero-section" style="background-image: url('classical-library.jpg')">
+        <section id="home" class="hero-section" style="background-image: url('library.jpg')">
             <div class="hero-overlay">
                 <div>
                     <h2 class="font-bold accent-text">Welcome to Philo Classical Academy</h2>
