--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h2 class="font-bold">About Philo Classical Academy</h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 p-4">
-                    <img src="schoolbuilding.jpg" alt="Philo Classical Academy Campus" class="rounded-lg shadow-lg" loading="lazy">
+                    <img src="Heading.jpg" alt="Philo Classical Academy Campus" class="rounded-lg shadow-lg" loading="lazy">
                 </div>
                 <div class="md:w-1/2 p-4">
                     <p>Located in the vibrant Twin Cities, Philo Classical Academy is a classical, great books school dedicated to the pursuit of truth, goodness, and beauty. Our rigorous curriculum, grounded in the Western intellectual tradition, fosters nobility, virtue, and intellectual excellence. With a unique emphasis on traditional Western martial training, we cultivate both mind and body.</p>
