--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Philo Classical Academy, classical education, great books, Twin Cities, virtue, academics">
     <meta name="author" content="Philo Classical Academy">
     <title>Philo Classical Academy | Virtute ad Veritatem</title>
-    <link rel="icon" type="image/png" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="favicon-32x32.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -85,7 +85,7 @@
             <h2 class="font-bold">About Philo Classical Academy</h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 p-4">
-                    <img src="images/Heading.jpg" alt="Philo Classical Academy Campus" class="rounded-lg shadow-lg about-image" loading="lazy">
+                    <img src="Heading.jpg" alt="Philo Classical Academy Campus" class="rounded-lg shadow-lg about-image" loading="lazy">
                 </div>
                 <div class="md:w-1/2 p-4">
                     <p>Located in the vibrant Twin Cities, Philo Classical Academy is a classical, great books school dedicated to the pursuit of truth, goodness, and beauty. Our rigorous curriculum, grounded in the Western intellectual tradition, fosters nobility, virtue, and intellectual excellence. With a unique emphasis on traditional Western martial training, we cultivate both mind and body.</p>
