--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="banner">
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <div class="flex flex-col items-center md:flex-row">
-                <img src="philo-academy-pegasus.jpg" alt="Philo Classical Academy Pegasus Logo" class="logo">
+                <img src="Header.jpg" alt="Philo Classical Academy Pegasus Logo" class="logo">
                 <div class="text-container">
                     <h1 class="text-4xl md:text-5xl accent-text">Philo Classical Academy</h1>
                     <p class="motto mt-2">Virtute ad Veritatem</p>
@@ -71,7 +71,7 @@
     <!-- Main Content -->
     <main>
         <!-- Hero Section -->
-        <section id="home" class="hero-section" style="background-image: url('classical-library.jpg')">
+        <section id="home" class="hero-section" style="background-image: url('library.jpg')">
             <div class="hero-overlay">
                 <div>
                     <h2 class="font-bold accent-text">Welcome to Philo Classical Academy</h2>
@@ -85,7 +85,7 @@
             <h2 class="font-bold">About Philo Classical Academy</h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 p-4">
-                    <img src="Heading.jpg" alt="Philo Classical Academy Campus" class="rounded-lg shadow-lg about-image" loading="lazy">
+                    <img src="crest.jpg" alt="Philo Classical Academy Campus" class="rounded-lg shadow-lg about-image" loading="lazy">
                 </div>
                 <div class="md:w-1/2 p-4">
                     <p>Located in the vibrant Twin Cities, Philo Classical Academy is a classical, great books school dedicated to the pursuit of truth, goodness, and beauty. Our rigorous curriculum, grounded in the Western intellectual tradition, fosters nobility, virtue, and intellectual excellence. With a unique emphasis on traditional Western martial training, we cultivate both mind and body.</p>
