--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="banner">
         <div class="container mx-auto flex flex-col md:flex-row items-center justify-between px-4">
             <div class="flex flex-col items-center md:flex-row">
-                <img src="Heading.jpg" alt="Philo Classical Academy Banner" class="logo">
+                <img src="Heading.jpg?v=1" alt="Philo Classical Academy Banner" class="logo">
                 <div class="text-container">
                     <h1 class="text-4xl md:text-5xl accent-text">Philo Classical Academy</h1>
                     <p class="motto mt-2">Virtute ad Veritatem</p>
@@ -30,6 +30,7 @@
         </div>
     </header>
     <div class="divider"></div>
+
     <!-- Navigation -->
     <nav class="sub-banner">
         <div class="container mx-auto flex flex-col md:flex-row justify-center items-center px-4 space-y-4 md:space-y-0 md:space-x-8">
